remove set height on section which caused issue on small screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,9 +116,11 @@ justify-content: flex-end;*/
     text-align:center;
     margin:20px 0;
 }
+/* this is the cause of this section overlapping down to the below section
+
 #ethos{
     height:600px;
-}
+}*/
 
 #ethos-parent {
     display:flex;
@@ -240,6 +242,9 @@ footer i {
     width:100%;
 }
 
-@media screen and (max-width: ) {
+/*@media screen and (max-width:1800px ) {
+    #ethos-parent{
+        width:65%;
+    }
     
-}
+}*/
